@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-08-17T16:23:33Z",
+  "timestamp" : "2022-08-18T08:18:51Z",
   "count_outdated" : 463,
   "uniques_outdated" : 264,
   "count" : 490,
@@ -7,9 +7,9 @@
   "clones" : [
     {
       "timestamp": "2022-08-04T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -56,6 +56,13 @@
     },
     {
       "timestamp": "2022-08-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
