@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2022-08-04T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-08-05T00:00:00Z",
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2022-08-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-18T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
